--- a/style/style.css
+++ b/style/style.css
@@ -26,6 +26,17 @@ h5 {
 }
 /*End reset document general*/
 
+/*Reset secciones*/
+.seccion1,
+.seccion2,
+.seccion3,
+.seccion4,
+.seccion5 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 /*Encabezado header*/
 .espacioStickyHeader {
   height: 70px;
@@ -131,21 +142,23 @@ h5 {
   align-items: center;
 }
 
+.nav li {
+  display: flex;
+  width: 100%;
+  height: 20vh;
+  justify-content: center;
+  align-items: center;
+}
 .nav a {
+  display: flex;
+  flex-direction: column;
   color: white;
   font-size: 2.5rem;
   text-decoration: none;
-  width: 100%;
-  height: 100%;
-}
-
-.nav li {
-  display: flex;
-  width: 15%;
-  height: 5%;
+  width: inherit;
+  height: inherit;
   text-align: center;
   justify-content: center;
-  align-items: center;
 }
 
 .nav li:hover {
@@ -176,3 +189,21 @@ h5 {
   font-size: 25px;
 }
 /*End nav*/
+
+/*Label seccion 1 reloj*/
+.label1 {
+  font-size: 16px;
+  display: block;
+  width: 50%;
+  height: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  color: black;
+  font-size: 30px;
+}
+
+h3 {
+  margin-top: 120px;
+  font-weight: bold;
+}
