--- a/style/style.css
+++ b/style/style.css
@@ -37,7 +37,7 @@ h5 {
   align-items: center;
 }
 
-button {
+.button {
   background: #4caf50;
   color: white;
   padding: 12px 24px;
@@ -48,13 +48,13 @@ button {
   transition: 0.3s;
 }
 
-button:disabled {
+.button:disabled {
   background: #6b8e72;
   cursor: not-allowed;
   opacity: 0.7;
 }
 
-button:not(:disabled):hover {
+.button:not(:disabled):hover {
   background: #45a049;
 }
 /*End Reset secciones*/
